--- a/app/build.gradle
+++ b/app/build.gradle
@@ -19,6 +19,10 @@ android {
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
     }
 
+    viewBinding{
+        enabled = true
+    }
+
     compileOptions {
         sourceCompatibility JavaVersion.VERSION_1_8
         targetCompatibility JavaVersion.VERSION_1_8
@@ -52,4 +56,14 @@ dependencies {
     implementation deps.lifecycle.runtime
     implementation deps.lifecycle.savedstate
     implementation deps.lifecycle.compiler
+
+    //retrofit
+    implementation deps.retrofit.retrofit
+    implementation deps.retrofit.gson
+//    implementation deps.retrofit.protobuf
+    implementation deps.retrofit.rxjava3
+
+    //RxJava
+    implementation deps.rxjava.rxjava
+    implementation deps.rxjava.rxandroid
 }
